<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        android:layout_marginStart="17dp"
        android:background="@color/white"
        android:layout_marginTop="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="52dp"
        android:layout_marginTop="62dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/profileImage_main"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginTop="155dp"
        android:src="@drawable/ic_user"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:background="@drawable/button_background"
        app:backgroundTint="@android:color/black"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="294dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_user"
        android:layout_marginStart="39dp"
        android:layout_marginTop="368dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="372dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_email"
        android:layout_marginStart="39dp"
        android:layout_marginTop="427dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:text="@string/user_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="432dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_phone"
        android:layout_marginStart="39dp"
        android:layout_marginTop="486dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvProfilePhoneNumber"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:text="@string/user_phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="490dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/organizerNotifText"
        android:layout_width="275dp"
        android:layout_height="24dp"
        android:text="@string/notifications_organizers"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="587dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Switch
        android:id="@+id/organizerSwitch"
        android:layout_width="52dp"
        android:layout_height="32dp"
        android:layout_marginStart="318dp"
        android:layout_marginTop="587dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/adminNotifText"
        android:layout_width="273dp"
        android:layout_height="24dp"
        android:text="@string/notifications_admin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="637dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Switch
        android:id="@+id/adminSwitch"
        android:layout_width="52dp"
        android:layout_height="32dp"
        android:layout_marginStart="318dp"
        android:layout_marginTop="637dp"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
