<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        android:layout_marginStart="17dp"
        android:layout_marginTop="66dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="52dp"
        android:layout_marginTop="62dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="121dp"
        android:layout_height="121dp"
        android:layout_marginTop="155dp"
        android:src="@drawable/ic_user"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/replace"
        android:textSize="16sp"
        android:textColor="#8A8A8A"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintEnd_toStartOf="@id/textDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/textDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:textSize="16sp"
        android:textColor="#8A8A8A"
        app:layout_constraintTop_toTopOf="@id/replace"
        app:layout_constraintStart_toEndOf="@id/replace"
        app:layout_constraintEnd_toStartOf="@id/remove"/>

    <TextView
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/remove"
        android:textSize="16sp"
        android:textColor="#8A8A8A"
        android:layout_marginStart="4dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@id/replace"
        app:layout_constraintStart_toEndOf="@id/textDivider"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_user"
        android:layout_marginStart="39dp"
        android:layout_marginTop="368dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/e_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="372dp"
        android:background="@drawable/edit_text_underline"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_email"
        android:layout_marginStart="39dp"
        android:layout_marginTop="427dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/e_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="432dp"
        android:background="@drawable/edit_text_underline"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_phone"
        android:layout_marginStart="39dp"
        android:layout_marginTop="486dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/e_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="490dp"
        android:background="@drawable/edit_text_underline"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="354dp"
        android:layout_height="45dp"
        android:text="@string/save_changes"
        android:background="@drawable/button_background"
        app:backgroundTint="@android:color/black"
        android:textColor="@color/white"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="565dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>